Bug 409956 - Window decoration of cuttlefish shows Wayland generic icon
Summary: Window decoration of cuttlefish shows Wayland generic icon
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: Icon Explorer (other bugs)
Version First Reported In: 5.90.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-18 14:19 UTC by Patrick Silva
Modified: 2024-03-29 11:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments
screenshot (11.15 KB, image/png)
2019-07-18 14:19 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-07-18 14:19:42 UTC
Created attachment 121611 [details]
screenshot

SUMMARY


STEPS TO REPRODUCE
1.  start Wayland session
2.  open cuttlefish
3. 

OBSERVED RESULT
as we can see in the attached screenshot, window decorations shows Wayland generic icon.
The same icon appears in the task switcher (alt+tab).

EXPECTED RESULT
both window decoration and task switcher show cuttlefish icon.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Comment 1 David Edmundson 2019-07-18 14:31:53 UTC
[1972827.001]  -> xdg_toplevel@33.set_app_id("cuttlefish")


./share/applications/org.kde.cuttlefish.desktop


These don't match up.
Comment 2 Kai Uwe Broulik 2019-07-19 07:24:32 UTC
Git commit 2b7be756aae766725258810ee6be21bed9c37c5b by Kai Uwe Broulik.
Committed on 19/07/2019 at 07:24.
Pushed by broulik into branch 'master'.

[Cuttlefish] Set correct desktopFileName

M  +1    -0    cuttlefish/src/main.cpp

https://commits.kde.org/plasma-sdk/2b7be756aae766725258810ee6be21bed9c37c5b
Comment 3 Patrick Silva 2022-09-17 16:53:27 UTC
Can reproduce again.

Operating System: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 4 Bug Janitor Service 2023-05-04 13:09:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-sdk/-/merge_requests/72
Comment 5 Bug Janitor Service 2023-05-04 15:02:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-sdk/-/merge_requests/73
Comment 6 Nate Graham 2023-05-06 14:10:22 UTC
Git commit 7e1584b32cbe64f895d67c5cb579c6914bec5b20 by Nate Graham, on behalf of Alessio Mattiazzi.
Committed on 06/05/2023 at 14:10.
Pushed by ngraham into branch 'master'.

Cuttlefish: Set window decoration icon

Set the window decoration icon and correct the .desktop file name.
FIXED-IN: 5.27.5

M  +1    -2    cuttlefish/src/main.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/7e1584b32cbe64f895d67c5cb579c6914bec5b20
Comment 7 Nate Graham 2023-05-06 14:15:03 UTC
Git commit f21c59df59d8bb261edbe189159ce9f15772e2bb by Nate Graham, on behalf of Alessio Mattiazzi.
Committed on 06/05/2023 at 14:14.
Pushed by ngraham into branch 'Plasma/5.27'.

Cuttlefish: Set window decoration icon

Set the window decoration icon and correct the .desktop file name.
FIXED-IN: 5.27.5


(cherry picked from commit 7e1584b32cbe64f895d67c5cb579c6914bec5b20)

M  +1    -2    cuttlefish/src/main.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/f21c59df59d8bb261edbe189159ce9f15772e2bb
Comment 8 Patrick Silva 2023-08-27 12:04:35 UTC
Can reproduce again on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 9 Nate Graham 2023-08-28 19:18:04 UTC
Working for me, which means this must be some sort of Neon packaging bug rather than a recurrence of the original issue. Please submit a new bug report for Neon specifically.
Comment 10 Patrick Silva 2023-11-30 13:59:59 UTC
It's not a packing bug. Same bug on Arch Linux.

Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 11 Nate Graham 2023-11-30 20:18:33 UTC
Can also reproduce again. Maybe this broke during the recent rename to "Icon Explorer".
Comment 12 Patrick Silva 2024-03-29 11:31:53 UTC
Fixed.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.2-arch2-1 (64-bit)
Graphics Platform: Wayland