[Cuttlefish] Set correct desktopFileName

BUG: 409956